# chess-engine

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
data/: games.pgn  training_data.csv
src/: CMakeLists.txt  gameinfo.cpp  gameinfo_calc.cpp  main.cpp  utils.cpp
src/inc/: data_gen.hpp  data_io.hpp  gameinfo.hpp  gameinfo_calc.hpp  io.hpp  learn.hpp  utils.hpp
test/: CMakeLists.txt  dummy.test.cpp  gameinfo_calc.test.cpp  utils.test.cpp
